Fix sidebar scrollbar position in rtl, Beautify the appearance of the items in tables.

--- a/publishable/assets/css/rtl.css
+++ b/publishable/assets/css/rtl.css
@@ -342,6 +342,16 @@
     float: right;
 }
 
+.ps.ps--active-y > .ps__scrollbar-y-rail {
+    right: auto !important;
+    left: 0;
+}
+
+.ps > .ps__scrollbar-y-rail > .ps__scrollbar-y {
+    right:auto !important;
+    left: 2px;
+}
+
 @media (max-width: 768px) {
     [dir="rtl"] .navbar {
         padding-left: 0px;
