--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3783,6 +3783,7 @@ a.text-action{color:#a3afb7}a.text-action,a.text-action:focus,a.text-action:hove
 .voyager .table > tfoot > tr > td,
 .voyager .table > tfoot > tr > th {
     border-color: #EAEAEA;
+    vertical-align: middle;
 }
 
 .voyager .table > thead > tr > th {
